src/y.output
Terminals unused in grammar

   UNSIGNED
   CONST
   SIGNED
   STRUCT
   UNION
   ENUM
   VOLATILE
   GOTO
   TYPEDEF
   AUTO
   REGISTER
   EXTERN
   STATIC
   SIZEOF
   SINGLE_COMMENT
   COMMENTS
   STRING


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 var_declaration: type var_declaration_list SEMI

    5 type: INT
    6     | DOUBLE
    7     | FLOAT
    8     | VOID
    9     | LONG
   10     | SHORT
   11     | CHAR

   12 var_declaration_list: var_declaration_list COMMA var_decl
   13                     | var_decl

   14 var_decl: IDENTIFIER
   15         | IDENTIFIER ASSIGN expressionv
   16         | array_identifier
   17         | array_identifier ASSIGN array_init

   18 array_identifier: IDENTIFIER LEFT_BRACKET INTEGER RIGHT_BRACKET

   19 array_access: IDENTIFIER LEFT_BRACKET INTEGER RIGHT_BRACKET

   20 array_init: LEFT_BRACE array_init_list RIGHT_BRACE
   21           | LEFT_BRACE expression_list RIGHT_BRACE

   22 array_init_list: array_init_list COMMA array_init
   23                | array_init

   24 expression_list: expression_list COMMA expressionv
   25                | expressionv

   26 expressionv: var ASSIGN expressionv
   27            | expression

   28 expression: expression PLUS expression
   29           | expression MINUS expression
   30           | expression MUL expression
   31           | expression DIV expression
   32           | expression MOD expression
   33           | LEFT_PAREN expressionv RIGHT_PAREN
   34           | expression LESS expression
   35           | expression LESS_EQUAL expression
   36           | expression GREATER expression
   37           | expression GREATER_EQUAL expression
   38           | expression AND_AND expression
   39           | expression OR_OR expression
   40           | NOT expression
   41           | expression EQUAL expression
   42           | expression NOT_EQUAL expression
   43           | MINUS expression
   44           | PLUS_PLUS var
   45           | var PLUS_PLUS
   46           | MINUS_MINUS var
   47           | var MINUS_MINUS
   48           | var
   49           | call
   50           | constant

   51 var: IDENTIFIER
   52    | array_access

   53 constant: INTEGER
   54         | DOUBLE_NUMBER
   55         | CHARACTER

   56 call: IDENTIFIER LEFT_PAREN args RIGHT_PAREN

   57 args: args_list
   58     | %empty

   59 args_list: args_list COMMA expressionv
   60          | expressionv

   61 declaration: function_declaration
   62            | var_declaration

   63 function_declaration: function_decl SEMI
   64                     | function_definition

   65 function_definition: function_decl function_body

   66 function_decl: type IDENTIFIER LEFT_PAREN function_args RIGHT_PAREN

   67 function_args: function_arg_list
   68              | %empty

   69 function_arg_list: function_arg
   70                  | function_arg COMMA function_arg_list

   71 function_arg: type IDENTIFIER

   72 function_body: LEFT_BRACE function_statements RIGHT_BRACE

   73 function_statements: statements return_statement

   74 return_statement: RETURN expressionv SEMI
   75                 | %empty

   76 statements: statement statements
   77           | %empty

   78 statement: var_declaration
   79          | iterationStatement
   80          | selectionStatement
   81          | expressionStatement
   82          | jumpStatement

   83 expressionStatement: expressionv SEMI
   84                    | SEMI

   85 iterationStatement: WHILE LEFT_PAREN expressionv RIGHT_PAREN loopBody
   86                   | DO compoundStatement WHILE LEFT_PAREN expressionv RIGHT_PAREN SEMI
   87                   | FOR LEFT_PAREN forCondition RIGHT_PAREN loopBody

   88 loopBody: statement
   89         | compoundStatement

   90 compoundStatement: LEFT_BRACE statements RIGHT_BRACE

   91 forCondition: forInitList SEMI forExpression SEMI incrementExpressionList

   92 forExpression: expressionv
   93              | %empty

   94 incrementExpressionList: expression_list
   95                        | %empty

   96 forInitList: %empty
   97            | forDeclaration
   98            | expression_list

   99 forDeclaration: type var_declaration_list

  100 jumpStatement: CONTINUE SEMI
  101              | BREAK SEMI

  102 selectionStatement: ifStatement
  103                   | switchStatement

  104 ifStatement: IF LEFT_PAREN expressionv RIGHT_PAREN ifBody
  105            | IF LEFT_PAREN expressionv RIGHT_PAREN ifBody ELSE elseBody

  106 ifBody: compoundStatement
  107       | statement

  108 elseBody: compoundStatement
  109         | statement

  110 switchStatement: SWITCH LEFT_PAREN expressionv RIGHT_PAREN LEFT_BRACE labeledStatementList RIGHT_BRACE

  111 labeledStatementList: labeledStatement labeledStatementList
  112                     | %empty

  113 labeledStatement: CASE constant COLON statements
  114                 | DEFAULT COLON statements


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 5
LONG (259) 9
FLOAT (260) 7
SHORT (261) 10
VOID (262) 8
DOUBLE (263) 6
CHAR (264) 11
UNSIGNED (265)
CONST (266)
SIGNED (267)
STRUCT (268)
UNION (269)
ENUM (270)
VOLATILE (271)
IF (272) 104 105
ELSE (273) 105
SWITCH (274) 110
GOTO (275)
CASE (276) 113
DO (277) 86
WHILE (278) 85 86
FOR (279) 87
CONTINUE (280) 100
BREAK (281) 101
RETURN (282) 74
DEFAULT (283) 114
TYPEDEF (284)
AUTO (285)
REGISTER (286)
EXTERN (287)
STATIC (288)
SIZEOF (289)
SINGLE_COMMENT (290)
COMMENTS (291)
COLON (292) 113 114
LEFT_PAREN (293) 33 56 66 85 86 87 104 105 110
RIGHT_PAREN (294) 33 56 66 85 86 87 104 105 110
LEFT_BRACKET (295) 18 19
RIGHT_BRACKET (296) 18 19
LEFT_BRACE (297) 20 21 72 90 110
RIGHT_BRACE (298) 20 21 72 90 110
LESS (299) 34
LESS_EQUAL (300) 35
GREATER (301) 36
GREATER_EQUAL (302) 37
PLUS (303) 28
PLUS_PLUS (304) 44 45
MINUS (305) 29 43
MINUS_MINUS (306) 46 47
DIV (307) 31
MOD (308) 32
MUL (309) 30
AND_AND (310) 38
OR_OR (311) 39
EQUAL (312) 41
NOT_EQUAL (313) 42
NOT (314) 40
COMMA (315) 12 22 24 59 70
SEMI (316) 4 63 74 83 84 86 91 100 101
ASSIGN (317) 15 17 26
IDENTIFIER (318) 14 15 18 19 51 56 66 71
INTEGER (319) 18 19 53
DOUBLE_NUMBER (320) 54
CHARACTER (321) 55
STRING (322)
IFX (323)
NEG (324)


Nonterminals, with rules where they appear

$accept (70)
    on left: 0
program (71)
    on left: 1, on right: 0
declaration_list (72)
    on left: 2 3, on right: 1 2
var_declaration (73)
    on left: 4, on right: 62 78
type (74)
    on left: 5 6 7 8 9 10 11, on right: 4 66 71 99
var_declaration_list (75)
    on left: 12 13, on right: 4 12 99
var_decl (76)
    on left: 14 15 16 17, on right: 12 13
array_identifier (77)
    on left: 18, on right: 16 17
array_access (78)
    on left: 19, on right: 52
array_init (79)
    on left: 20 21, on right: 17 22 23
array_init_list (80)
    on left: 22 23, on right: 20 22
expression_list (81)
    on left: 24 25, on right: 21 24 94 98
expressionv (82)
    on left: 26 27, on right: 15 24 25 26 33 59 60 74 83 85 86 92 104
    105 110
expression (83)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
    46 47 48 49 50, on right: 27 28 29 30 31 32 34 35 36 37 38 39 40
    41 42 43
var (84)
    on left: 51 52, on right: 26 44 45 46 47 48
constant (85)
    on left: 53 54 55, on right: 50 113
call (86)
    on left: 56, on right: 49
args (87)
    on left: 57 58, on right: 56
args_list (88)
    on left: 59 60, on right: 57 59
declaration (89)
    on left: 61 62, on right: 2 3
function_declaration (90)
    on left: 63 64, on right: 61
function_definition (91)
    on left: 65, on right: 64
function_decl (92)
    on left: 66, on right: 63 65
function_args (93)
    on left: 67 68, on right: 66
function_arg_list (94)
    on left: 69 70, on right: 67 70
function_arg (95)
    on left: 71, on right: 69 70
function_body (96)
    on left: 72, on right: 65
function_statements (97)
    on left: 73, on right: 72
return_statement (98)
    on left: 74 75, on right: 73
statements (99)
    on left: 76 77, on right: 73 76 90 113 114
statement (100)
    on left: 78 79 80 81 82, on right: 76 88 107 109
expressionStatement (101)
    on left: 83 84, on right: 81
iterationStatement (102)
    on left: 85 86 87, on right: 79
loopBody (103)
    on left: 88 89, on right: 85 87
compoundStatement (104)
    on left: 90, on right: 86 89 106 108
forCondition (105)
    on left: 91, on right: 87
forExpression (106)
    on left: 92 93, on right: 91
incrementExpressionList (107)
    on left: 94 95, on right: 91
forInitList (108)
    on left: 96 97 98, on right: 91
forDeclaration (109)
    on left: 99, on right: 97
jumpStatement (110)
    on left: 100 101, on right: 82
selectionStatement (111)
    on left: 102 103, on right: 80
ifStatement (112)
    on left: 104 105, on right: 102
ifBody (113)
    on left: 106 107, on right: 104 105
elseBody (114)
    on left: 108 109, on right: 105
switchStatement (115)
    on left: 110, on right: 103
labeledStatementList (116)
    on left: 111 112, on right: 110 111
labeledStatement (117)
    on left: 113 114, on right: 111


State 0

    0 $accept: . program $end

    INT     shift, and go to state 1
    LONG    shift, and go to state 2
    FLOAT   shift, and go to state 3
    SHORT   shift, and go to state 4
    VOID    shift, and go to state 5
    DOUBLE  shift, and go to state 6
    CHAR    shift, and go to state 7

    program               go to state 8
    declaration_list      go to state 9
    var_declaration       go to state 10
    type                  go to state 11
    declaration           go to state 12
    function_declaration  go to state 13
    function_definition   go to state 14
    function_decl         go to state 15


State 1

    5 type: INT .

    $default  reduce using rule 5 (type)


State 2

    9 type: LONG .

    $default  reduce using rule 9 (type)


State 3

    7 type: FLOAT .

    $default  reduce using rule 7 (type)


State 4

   10 type: SHORT .

    $default  reduce using rule 10 (type)


State 5

    8 type: VOID .

    $default  reduce using rule 8 (type)


State 6

    6 type: DOUBLE .

    $default  reduce using rule 6 (type)


State 7

   11 type: CHAR .

    $default  reduce using rule 11 (type)


State 8

    0 $accept: program . $end

    $end  shift, and go to state 16


State 9

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT     shift, and go to state 1
    LONG    shift, and go to state 2
    FLOAT   shift, and go to state 3
    SHORT   shift, and go to state 4
    VOID    shift, and go to state 5
    DOUBLE  shift, and go to state 6
    CHAR    shift, and go to state 7

    $default  reduce using rule 1 (program)

    var_declaration       go to state 10
    type                  go to state 11
    declaration           go to state 17
    function_declaration  go to state 13
    function_definition   go to state 14
    function_decl         go to state 15


State 10

   62 declaration: var_declaration .

    $default  reduce using rule 62 (declaration)


State 11

    4 var_declaration: type . var_declaration_list SEMI
   66 function_decl: type . IDENTIFIER LEFT_PAREN function_args RIGHT_PAREN

    IDENTIFIER  shift, and go to state 18

    var_declaration_list  go to state 19
    var_decl              go to state 20
    array_identifier      go to state 21


State 12

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


State 13

   61 declaration: function_declaration .

    $default  reduce using rule 61 (declaration)


State 14

   64 function_declaration: function_definition .

    $default  reduce using rule 64 (function_declaration)


State 15

   63 function_declaration: function_decl . SEMI
   65 function_definition: function_decl . function_body

    LEFT_BRACE  shift, and go to state 22
    SEMI        shift, and go to state 23

    function_body  go to state 24


State 16

    0 $accept: program $end .

    $default  accept


State 17

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


State 18

   14 var_decl: IDENTIFIER .
   15         | IDENTIFIER . ASSIGN expressionv
   18 array_identifier: IDENTIFIER . LEFT_BRACKET INTEGER RIGHT_BRACKET
   66 function_decl: type IDENTIFIER . LEFT_PAREN function_args RIGHT_PAREN

    LEFT_PAREN    shift, and go to state 25
    LEFT_BRACKET  shift, and go to state 26
    ASSIGN        shift, and go to state 27

    $default  reduce using rule 14 (var_decl)


State 19

    4 var_declaration: type var_declaration_list . SEMI
   12 var_declaration_list: var_declaration_list . COMMA var_decl

    COMMA  shift, and go to state 28
    SEMI   shift, and go to state 29


State 20

   13 var_declaration_list: var_decl .

    $default  reduce using rule 13 (var_declaration_list)


State 21

   16 var_decl: array_identifier .
   17         | array_identifier . ASSIGN array_init

    ASSIGN  shift, and go to state 30

    $default  reduce using rule 16 (var_decl)


State 22

   72 function_body: LEFT_BRACE . function_statements RIGHT_BRACE

    INT            shift, and go to state 1
    LONG           shift, and go to state 2
    FLOAT          shift, and go to state 3
    SHORT          shift, and go to state 4
    VOID           shift, and go to state 5
    DOUBLE         shift, and go to state 6
    CHAR           shift, and go to state 7
    IF             shift, and go to state 31
    SWITCH         shift, and go to state 32
    DO             shift, and go to state 33
    WHILE          shift, and go to state 34
    FOR            shift, and go to state 35
    CONTINUE       shift, and go to state 36
    BREAK          shift, and go to state 37
    LEFT_PAREN     shift, and go to state 38
    PLUS_PLUS      shift, and go to state 39
    MINUS          shift, and go to state 40
    MINUS_MINUS    shift, and go to state 41
    NOT            shift, and go to state 42
    SEMI           shift, and go to state 43
    IDENTIFIER     shift, and go to state 44
    INTEGER        shift, and go to state 45
    DOUBLE_NUMBER  shift, and go to state 46
    CHARACTER      shift, and go to state 47

    $default  reduce using rule 77 (statements)

    var_declaration      go to state 48
    type                 go to state 49
    array_access         go to state 50
    expressionv          go to state 51
    expression           go to state 52
    var                  go to state 53
    constant             go to state 54
    call                 go to state 55
    function_statements  go to state 56
    statements           go to state 57
    statement            go to state 58
    expressionStatement  go to state 59
    iterationStatement   go to state 60
    jumpStatement        go to state 61
    selectionStatement   go to state 62
    ifStatement          go to state 63
    switchStatement      go to state 64


State 23

   63 function_declaration: function_decl SEMI .

    $default  reduce using rule 63 (function_declaration)


State 24

   65 function_definition: function_decl function_body .

    $default  reduce using rule 65 (function_definition)


State 25

   66 function_decl: type IDENTIFIER LEFT_PAREN . function_args RIGHT_PAREN

    INT     shift, and go to state 1
    LONG    shift, and go to state 2
    FLOAT   shift, and go to state 3
    SHORT   shift, and go to state 4
    VOID    shift, and go to state 5
    DOUBLE  shift, and go to state 6
    CHAR    shift, and go to state 7

    $default  reduce using rule 68 (function_args)

    type               go to state 65
    function_args      go to state 66
    function_arg_list  go to state 67
    function_arg       go to state 68


State 26

   18 array_identifier: IDENTIFIER LEFT_BRACKET . INTEGER RIGHT_BRACKET

    INTEGER  shift, and go to state 69


State 27

   15 var_decl: IDENTIFIER ASSIGN . expressionv
